--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 $backgroundColor: #f5f5f5;
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -15,20 +16,27 @@ body {
     flex-direction: column;
     height: 100%;
   }
-
-  footer {
-    background: darken($backgroundColor, 50);
-    border-top: 1px solid #eee;
-    padding: 1em 3em;
-    margin: 0;
+  .div1 {
+    background-color: lightgrey;
+    width: 300px;
+    border: 4px solid #173e5c;
+    padding: 10px;
+    margin-left: 130px;
+    margin-top: 10px;
   }
+  // footer {
+  //   background: darken($backgroundColor, 50);
+  //   border-top: 1px solid #eee;
+  //   padding: 1em 3em;
+  //   margin: 0;
+  // }
 
-  header {
-    background: darken($backgroundColor, 75);
-    border-bottom: 1px solid #eee;
-    color: #eee;
-    padding: 0;
-    margin: 0;
-    text-align: center;
-  }
+  // header {
+  //   background: darken($backgroundColor, 75);
+  //   border-bottom: 1px solid #eee;
+  //   color: #eee;
+  //   padding: 0;
+  //   margin: 0;
+  //   text-align: center;
+  // }
 }
