--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -14,10 +14,11 @@ form {
       span {
         cursor: pointer;
         margin-right: 1rem;
-        padding: .25rem .5rem;
+        padding: 0.25rem 0.5rem;
         background: #ccc;
 
-        &:hover, &.active {
+        &:hover,
+        &.active {
           background: #fff;
         }
       }
