--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,5 +1,20 @@
 $backgroundColor: #efefef;
 $radius: 40%;
+.btn {
+  border: none;
+  outline: none;
+  padding: 10px 16px;
+  background-color: #25358d;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+/* Style the active class, and buttons on mouse-over */
+.active, .btn:hover {
+  background-color: #666;
+  color: white;
+}
+
 
 form {
   display: inline-block;
@@ -15,12 +30,13 @@ form {
         cursor: pointer;
         margin-right: 1rem;
         padding: 0.25rem 0.5rem;
-        background: #ccc;
+        background: rgb(193, 185, 238);
 
-        &:hover,
-        &.active {
-          background: #fff;
-        }
+        // &:hover,
+        // &.active {
+        //   background: #fff;
+      
+        // }
       }
     }
   }
